# pico-tflmicro

./: CMakeLists.txt  README.md
Arducam/src/: CMakeLists.txt  arducam.c  arducam.h
examples/person_detection/: CMakeLists.txt  image_provider.cpp  main_functions.cpp
libraries/: CMakeLists.txt
port/: CMakeLists.txt  port_common.h
port/ioLibrary_Driver/inc/: w5x00_spi.h
port/ioLibrary_Driver/src/: w5x00_gpio_irq.c  w5x00_spi.c
